--- a/css/style.css
+++ b/css/style.css
@@ -8,4 +8,14 @@
     width: 100%;
     height: 100vh;
     background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+}
+.musicPlayerBox{
+    background: #ffe0e5;
+    width: 400px;
+    padding: 25px 35px;
+    text-align: center;
 }
