--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,19 @@
     padding: 25px 35px;
     text-align: center;
 }
+
+.musicPlayerBox .header-option{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+.musicPlayerBox .header-option .circleBtn{
+    border-radius: 50%;
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    background: #fff;
+    color: #f53192;
+    box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
+    cursor: pointer;
+}
