feat(index.html & style.css): create song img elem & set style

--- a/css/style.css
+++ b/css/style.css
@@ -35,3 +35,10 @@
     box-shadow: 0 5px 10px rgba(255, 26, 26, 0.22);
     cursor: pointer;
 }
+
+.musicPlayerBox .songImg{
+    width: 220px;
+    border-radius: 50%;
+    border: 8px solid #fff;
+    box-shadow: 0 10px 60px rgba(255, 26, 26, 0.22);
+}
