feat(index.html & style.css): create song title elements & set style

--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,15 @@
     border: 8px solid #fff;
     box-shadow: 0 10px 60px rgba(255, 26, 26, 0.22);
 }
+
+.musicPlayerBox .songTitle .songName{
+    font-size: 20px;
+    font-weight: 600;
+    color: #333;
+    margin-top: 20px;
+}
+.musicPlayerBox .songTitle .artistName{
+    font-size: 14px;
+    color: #333;
+    margin-top: 5px;
+}
