--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,22 @@
     color: #333;
     margin-top: 5px;
 }
+
+.musicPlayerBox #timeBar{
+    -webkit-appearance: none;
+    width: 100%;
+     height: 6px;
+     background: #f53192;
+     border-radius: 4px;
+     cursor: pointer;
+     margin: 40px 0;
+}
+.musicPlayerBox #timeBar::-webkit-slider-thumb{
+    -webkit-appearance: none;
+    background: #f53192;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    border: 8px solid #fff;
+    box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
+}
