feat(index.html & style.css): create controls btn elem & set style

--- a/css/style.css
+++ b/css/style.css
@@ -73,3 +73,27 @@
     border: 8px solid #fff;
     box-shadow: 0 5px 5px rgba(255, 26, 26, 0.22);
 }
+
+.musicPlayerBox .controlsBtn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.musicPlayerBox .controlsBtn .btn{
+    width: 60px;
+    height: 60px;
+    margin: 20px;
+    background: #fff;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    color: #f53192;
+    box-shadow: 0 10px 20px rgba(255, 26, 26, 0.22);
+    cursor: pointer;
+}
+.musicPlayerBox .controlsBtn .btn:nth-child(2){
+    transform: scale(1.5);
+    background-color: #f53192;
+    color: #fff;
+}
