--- a/css/style.css
+++ b/css/style.css
@@ -11,13 +11,17 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-wrap: wrap;
+    flex-wrap: wrap; 
 }
 .musicPlayerBox{
     background: #ffe0e5;
     width: 400px;
     padding: 25px 35px;
     text-align: center;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 0 0 20px 0px #ffffff1f;
+    border-radius: 5px;
 }
 
 .musicPlayerBox .header-option{
@@ -96,4 +100,21 @@
     transform: scale(1.5);
     background-color: #f53192;
     color: #fff;
+}
+
+.musicPlayerBox .modal-song-menu{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: -100%;
+    left: 0;
+    background: rgba(0, 0, 0, 0.8);
+    z-index: 5;
+    transition: 0.5s;
+}
+.musicPlayerBox .moreBtn{
+    z-index: 6;
+}
+.musicPlayerBox .moreBtn i {
+    padding: 12px;
 }
