--- a/css/style.css
+++ b/css/style.css
@@ -111,9 +111,35 @@
     background: rgba(0, 0, 0, 0.8);
     z-index: 5;
     transition: 0.5s;
+    padding: 80px 25px;
+    overflow: hidden;
 }
-.musicPlayerBox .moreBtn{
+.musicPlayerBox .modal-song-menu .song-menu{
+    border-top: 1px solid #fff;
+
+}
+.musicPlayerBox .modal-song-menu .song-menu .songs{
+    display: flex;
+    color: #fff;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 10px ;
+    cursor: pointer;
+    text-align: left;
+    position: relative;
+}
+.modal-song-menu .song-menu .songs img{
+    width: 50px;
+    height: 50px;
+    margin-right: 10px;
+}
+.modal-song-menu .song-menu .songs i{
+    position: absolute;
+    right: 15px;
+}
+.musicPlayerBox .circleBtn{
     z-index: 6;
+    
 }
 .musicPlayerBox .moreBtn i {
     padding: 12px;
