--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,9 @@
 }
 .musicPlayerBox .modal-song-menu .song-menu{
     border-top: 1px solid #fff;
-
+    width: 100%;
+    height: 420px !important;
+    overflow: scroll;
 }
 .musicPlayerBox .modal-song-menu .song-menu .songs{
     display: flex;
